# ks-sniff

./: .gitignore  BUILD.md  Cargo.toml  DECODE_LOGGING_GUIDE.md  FIX_ALPINE.md  README.md  TROUBLESHOOTING.md  ks-sniff.yaml  test_decode_logging.sh
.cargo/: config.toml
config/: ks-sniff.yaml
examples/: decode_logging_demo.rs  decode_packet.rs  pattern_matching_demo.rs  read_pcap.rs  rule_engine_demo.rs  simple_capture.rs
rules/: local.rules
src/: error.rs  lib.rs  main.rs
src/alerting/: mod.rs
src/capture/: mod.rs  packet.rs  pcap_capture.rs
src/config/: settings.rs
src/decoders/: decoder.rs  ethernet.rs  icmp.rs  ip.rs  mod.rs  pretty_print.rs  tcp.rs  udp.rs
src/detection/: mod.rs
src/rules/: matcher.rs  mod.rs  parser.rs  rule.rs  ruleset.rs  variables.rs
src/stats/: mod.rs
